# annapod

./: .gitignore  README.md
.github/workflows/: cloudflare-pages-deploy.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py  seed.py
apps/api/app/core/: __init__.py  config.py  database.py  llm.py  security.py
apps/api/app/models/: __init__.py  knowledge.py  learning.py  memory.py  seeker.py  session.py  user.py
apps/api/app/modules/knowledge/: __init__.py  seed_data.py  service.py
apps/api/app/modules/learning/: __init__.py  evaluator.py  recommender.py
apps/api/app/modules/preview/: __init__.py
apps/api/app/modules/simulator/: __init__.py  complaint.py  emotion.py  engine.py  events.py  memory.py  profile_manager.py  scales.py  style.py  templates.py
apps/api/app/routers/: __init__.py  auth.py  knowledge.py  learning.py  simulator.py
apps/api/app/schemas/: __init__.py  auth.py  knowledge.py  learning.py  simulator.py
apps/api/scripts/: load_huggingface.py  load_knowledge_open.py  load_knowledge_pubmed.py
apps/api/tests/: conftest.py  test_auth.py  test_knowledge.py  test_learning.py  test_simulator.py
apps/web/: .gitignore  README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
apps/web/cloudflare/: README.md  auth.ts  constants.ts  llm.ts  memory.ts  session-engine.ts  simulator.ts  types.ts  utils.ts  worker.ts
apps/web/scripts/: build-worker.mjs  precompute_profile_caches.py
deploy/: setup_local.py
local-skills/annaagent-initialization/: SKILL.md
scripts/: load_profiles.py  start.sh
(+32 files in other folders)
